--- a/beardoil.html
+++ b/beardoil.html
@@ -32,7 +32,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- The Band Section -->
 
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">About the Artist</h2>
+    <h2 class="w3-wide">Branding</h2>
     <p class="w3-opacity"><i></i></p>
     <p class="w3-justify">I'm a graphic designer working out of the Dallas-Fort Worth Metroplex. In my spare time I like to train Brazilian jiu-jitsu and work on my designs. Currently, I am in the process of finishing up my degree in Graphic Design and Media Arts from Southern New Hampshire University.</p>
    <br>
