--- a/beardoil.html
+++ b/beardoil.html
@@ -22,6 +22,10 @@ body {font-family: "Raleway", Arial, sans-serif}
    <IMG align="left" src="img/fz-gif-courier.gif" width="25%">
     <a href="index.html" class="w3-right w3-button w3-white">Home</a>
   </header>
+   &nbsf;
+    &nbsf;
+   <br>
+   
      <center> <img src="img/pf-s100-mockup-04111.jpg" style="width:60%" alt="Beard Oil bottle mockup"></center>
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">Branding</h2>
@@ -33,10 +37,10 @@ body {font-family: "Raleway", Arial, sans-serif}
  </p>
    
 
-<center>
-   <center> <img src="img/pf-s100-mockup-04111.jpg" style="width:60%" alt="Beard Oil bottle mockup">
+
+   <img src="img/pf-s100-mockup-04111.jpg" style="width:60%" alt="Beard Oil bottle mockup">
     <img src="img/tobaccovanillaoil.jpg" style="width:60%" alt="Beard Oil bottle mockup">
-    </center>  
+    
 
   <!-- The Band Section -->
 
@@ -47,7 +51,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 </div>
 
 <!-- Image of location/map -->
-
+   </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
