--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ body {font-family: "Raleway", Arial, sans-serif}
     <IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
     <a href="about.html" class="w3-right w3-button w3-white">ABOUT</a>
   </header>
-
+  &nbsf;
+    &nbsf;
+   <br>
   <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
