--- a/beardoil.html
+++ b/beardoil.html
@@ -22,8 +22,8 @@ body {font-family: "Raleway", Arial, sans-serif}
    <IMG align="left" src="img/fz-gif-courier.gif" width="25%">
     <a href="index.html" class="w3-right w3-button w3-white">Home</a>
   </header>
-   &nbsf;
-    &nbsf;
+   &nbsp;
+    &nbsp;
    <br>
    
      <center> <img src="img/pf-s100-mockup-04111.jpg" style="width:60%" alt="Beard Oil bottle mockup"></center>
