--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@ body {font-family: "Raleway", Arial, sans-serif}
     <a href="index.html" class="w3-right w3-button w3-white">Home</a>
   </header>
 
-
+<br>
+   <br>
 
    <center><img src="img/aboutpic6.png" style="width:30%"></center>
 
@@ -44,7 +45,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 <!-- Image of location/map -->
 
-
+   </div>
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
   <a href="https://www.instagram.com/graphic_felix/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
