--- a/beardoil.html
+++ b/beardoil.html
@@ -47,8 +47,24 @@ body {font-family: "Raleway", Arial, sans-serif}
   
 <!-- End Page Content -->
 </div>
-   <img src="img/pf-s100-mockup-04111.jpg" style="width:50%" alt="Beard Oil bottle mockup">
-    <img src="img/tobaccovanillaoil.jpg" style="width:50%" alt="Beard Oil bottle mockup">
+    <!-- Photo Grid -->
+  <div class="w3-row">
+    <div class="w3-half">
+      <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%">
+
+    </div>
+
+    <div class="w3-half">
+      <img src="/img/tobaccovanillaoil.jpg" style="width:100%">
+  
+    </div>
+  </div>
+
+ </div>
+  <br>
+ <br>
+<!-- End Page Content -->
+
    
 <!-- Image of location/map -->
    </div>
