--- a/beardoil.html
+++ b/beardoil.html
@@ -61,7 +61,11 @@ body {font-family: "Raleway", Arial, sans-serif}
   </div>
 
  </div>
-   <center> <img src="img/pf-s100-mockup-04111.jpg" style="width:60%" alt="Beard Oil bottle mockup"></center>
+   <center> <img src="img/pf-s100-mockup-04111.jpg" style="width:60%" alt="Beard Oil bottle mockup">
+ 
+ 
+ 
+<img src="img/Beard Oil Box.png" style="width:60%" alt="Beard Oil bottle mockup"></center>
   <br>
  <br>
 <!-- End Page Content -->
