--- a/beardoil.html
+++ b/beardoil.html
@@ -50,11 +50,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 </div>
     <!-- Photo Grid -->
 
-   <center> <img src="img/pf-s100-mockup-04111.jpg" style="width:90%" alt="Beard Oil bottle mockup"></center>
- 
- 
- 
-<img src="img/Beard%20Oil%20Box.png" style="width:80%" alt="Beard Oil box mockup"></center>
+   <center><img src="img/Beard%20Oil%20Box.png" style="width:80%" alt="Beard Oil box mockup"></center>
   <br>
  <br>
 <!-- End Page Content -->
