--- a/beardoil.html
+++ b/beardoil.html
@@ -25,7 +25,7 @@ body {font-family: "Raleway", Arial, sans-serif}
  <br>
    <br>
    
-
+   <center> <img src="img/pf-s100-mockup-04111.jpg" style="width:100%" alt="Beard Oil bottle mockup"></center>
  
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">Branding</h2>
