--- a/beardoil.html
+++ b/beardoil.html
@@ -19,8 +19,8 @@ body {font-family: "Raleway", Arial, sans-serif}
   
    <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-   <IMG align="left" src="img/fz-gif-courier.gif" width="25%">
-    <a href="index.html" class="w3-right w3-button w3-white">Home</a>
+   < href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
+    <a href="about.html" class="w3-right w3-button w3-white">About</a>
   </header>
  <br>
    <br>
