--- a/beardoil.html
+++ b/beardoil.html
@@ -19,7 +19,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   
    <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-   < href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
+   <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
     <a href="about.html" class="w3-right w3-button w3-white">About</a>
   </header>
  <br>
@@ -30,7 +30,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">Branding</h2>
     <p class="w3-opacity"><i></i></p>
-    <p class="w3-justify">These are some pieces I created for a beard oil brand. The label was created in Adobe Illustrator and the mock-ups were created in Photoshop.</p>
+    <p class="w3-justify">These are some pieces I created for a beard oil brand. The label was created with Adobe Illustrator and the mock-ups were created with Photoshop.</p>
    <br>
 
    
