--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <p class="w3-opacity"><i></i></p>
     <p class="w3-justify">I'm a graphic designer working out of the Dallas-Fort Worth Metroplex. In my spare time I like to train Brazilian jiu-jitsu and work on my designs. Currently, I am in the process of finishing up my degree in Graphic Design and Media Arts from Southern New Hampshire University.</p>
    <br>
-   <p>My genuine passion for art in all its forms fuels me to pursue improvement of my craft. I'm always looking for new opportunities to work on creative projects with talented individuals. If you're interested in collaborating, please send me an email to <a href = "mailto: jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
+   <p>My genuine passion for art in all its forms fuels me to pursue improvement of my craft. I'm always looking for opportunities to work with talented individuals. If you're interested in collaborating, please send me an email to <a href = "mailto: jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
      
  </p>
    
