--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <div class="w3-half">
       <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%">
       <img src="/img/Mockup.jpg" style="width:100%">
-      <img src="/img/Magazine_Mockup_3.jpg" style="width:100%">
+      <img src="/img/battlecoffee.jpg" style="width:100%">
      <img src="/img/dreamfightposter1.jpg" style="width:100%">
     </div>
 
