--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
     <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
-    <a href="about.html" class="w3-right w3-button w3-white">ABOUT</a>
+    <a href="#about" class="w3-right w3-button w3-white">About</a>
   </header>
   &nbsp;
     &nbsp;
@@ -49,6 +49,31 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 
 <!-- Footer -->
+ <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
+  <h2>About</h2>
+  <img src="img/aboutpic6.png" style="width:30%" class="w3-image w3-padding-32" width="300" height="300">
+  <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
+    <p>I'm a graphic designer working out of the Dallas-Fort Worth Metroplex. In my spare time I like to train Brazilian jiu-jitsu and work on my designs. Currently, I am in the process of finishing up my degree in Graphic Design and Media Arts from Southern New Hampshire University.</p>
+      <br>
+   <p>My genuine passion for art in all its forms fuels me to pursue improvement of my craft. I'm always looking for opportunities to work with talented individuals. If you're interested in collaborating, please send me an email to <a href = "mailto: jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
+     
+ </p>
+    
+    <div class="w3-section">
+      <label><b>Name</b></label>
+      <input class="w3-input w3-border" type="text" required name="Name">
+    </div>
+    <div class="w3-section">
+      <label><b>Email</b></label>
+      <input class="w3-input w3-border" type="text" required name="Email">
+    </div>
+    <div class="w3-section">
+      <label><b>Message</b></label>
+      <input class="w3-input w3-border" required name="Message">
+    </div>
+    <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
+  </form>
+  <br>
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
  <a href="https://www.instagram.com/graphic_felix/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
  <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg"><i class="fa fa-youtube w3-hover-opacity"></i></a>                                                                                             
