--- a/index.html
+++ b/index.html
@@ -48,24 +48,11 @@ body {font-family: "Raleway", Arial, sans-serif}
   <form style="margin:auto;width:60%" action="/action_page.php" target="_blank">
     <p>I'm a graphic designer working out of the Dallas-Fort Worth Metroplex. In my spare time I like to train Brazilian jiu-jitsu and work on my designs. Currently, I am in the process of finishing up my degree in Graphic Design and Media Arts from Southern New Hampshire University.</p>
       <br>
-   <p>My genuine passion for art in all its forms fuels me to pursue improvement of my craft. I'm always looking for opportunities to work with talented individuals. If you're interested in collaborating, please send me an email to <a href = "mailto: jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
+   <p>I'm always looking for opportunities to work with talented individuals. If you're interested in collaborating, please send me an email to <a href = "mailto: jfelixzavala@yahoo.com">jfelixzavala@yahoo.com</a>
      
  </p>
     
-    <div class="w3-section">
-      <label><b>Name</b></label>
-      <input class="w3-input w3-border" type="text" required name="Name">
-    </div>
-    <div class="w3-section">
-      <label><b>Email</b></label>
-      <input class="w3-input w3-border" type="text" required name="Email">
-    </div>
-    <div class="w3-section">
-      <label><b>Message</b></label>
-      <input class="w3-input w3-border" required name="Message">
-    </div>
-    <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
-  </form>
+
   <br>
  </div>
   <br>
