--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ body {font-family: "Raleway", Arial, sans-serif}
      <img src="/img/beardbalm.jpg" style="width:100%">
       <img src="/img/Mockup.jpg" style="width:100%">
       <img src="/img/battlecoffee.jpg" style="width:100%">
+      <img src="/img/World-Fighter-Logo.gif" style="width:100%">
  
     </div>
 
