--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ body {font-family: "Raleway", Arial, sans-serif}
  </div>
   <br>
  <br>
+   <center>
 <!-- End Page Content -->
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
@@ -67,7 +68,7 @@ i.src = "https://cdn.curator.io/published/851066e1-93ae-4f0a-9e9f-164c17d6f7c6.j
 e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
 })();
 </script>
-
+   </center>
 <!-- Footer -->
 
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
