--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@ body {font-family: "Raleway", Arial, sans-serif}
     </div>
 
     <div class="w3-half">
+      <img src="/img/floresmockupthumb.jpg" style="width:100%">
         <img src="/img/beardbalm.jpg" style="width:100%">
       <img src="/img/Mockup.jpg" style="width:100%">
 
       <img src="/img/All%20in%20one_Cap%20Mock-up.png" style="width:100%">
       <img src="/img/hhcbrick.jpg" style="width:100%"> 
-     <img src="/img/retrobot%20sticker.jpg" style="width:100%">    
+     
       
     </div>
   </div>
