--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 <div class="w3-content" style="max-width:1500px">
 
   <!-- Header -->
-  <header class="w3-container w3-xlarge w3-padding-24">
+  <header class="w3-container w3-xlarge w3-padding-44">
     <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
     <a href="about.html" class="w3-right w3-button w3-white">About</a>
   </header>
@@ -55,6 +55,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
     
 
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-white w3-xlarge">
 
      
 <!-- End Page Content -->
