--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <div class="w3-half">
       <img src="/img/floresmockupthumb.jpg" style="width:100%">
         <img src="/img/beardbalm.jpg" style="width:100%">
-      <img src="/img/pencil.gif" style="width:100%">
+      <img src="/img/Pencil.gif" style="width:100%">
 
 
       <img src="/img/hhcbrick.jpg" style="width:100%"> 
