--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-44">
    <br>
-    <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
+    <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width:"25%" alt="Felix Zavala Motion graphics logo"></a>
     <a href="about.html" class="w3-right w3-button w3-white">About</a>
   </header>
   &nbsp;
@@ -29,11 +29,11 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
-      <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%">
+      <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%" alt="Beard oil bottle mockup">
   
-            <img src="/img/Magazine_Mockup_3.jpg" style="width:100%">
-      <img src="/img/battlecoffee.jpg" style="width:100%">
-      <img src="/img/World-Fighter-Logo1.gif" style="width:100%">
+            <img src="/img/Magazine_Mockup_3.jpg" style="width:100%" alt="Tyson Fury Magazine Mockup">
+      <img src="/img/battlecoffee.jpg" style="width:100%" alt="Battle Coffee advertisement">
+      <img src="/img/World-Fighter-Logo1.gif" style="width:100%" alt="Motion Graphic of World Fighter Logo">
       
     </div>
 
