--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <header class="w3-container w3-xlarge w3-padding-44">
    <br>
     <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" style="width:25%" alt="Felix Zavala Motion graphics logo"></a>
-    <a href="about.html" class="w3-right w3-button w3-white">About</a>
+    <a href="homet.html" class="w3-right w3-button w3-white">Home</a>
   </header>
   &nbsp;
     &nbsp;
@@ -28,19 +28,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <br>
  <body>
   
-  <!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:1500px">
-  
-   <!-- Header -->
-  <header class="w3-container w3-xlarge w3-padding-24">
-  <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" width="25%"></a>
-    <a href="index.html" class="w3-right w3-button w3-white">Home</a>
-  </header>
 
-<br>
-   <br>
-
-   <center><img src="img/aboutpic6.png" style="width:30%"></center>
 
   <!-- The Band Section -->
 
