--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ body {font-family: "Raleway", Arial, sans-serif}
     <br>
  <body>
   
-<img src="aboutpicbw.png">
+<img src="img/aboutpicbw.png">
 
   <!-- The Band Section -->
 
