--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ body {font-family: "Raleway", Arial, sans-serif}
   <header class="w3-container w3-xlarge w3-padding-44">
    <br>
     <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" style="width:25%" alt="Felix Zavala Motion graphics logo"></a>
-    <a href="homet.html" class="w3-right w3-button w3-white">Home</a>
+    <a href="home.html" class="w3-right w3-button w3-white">Home</a>
   </header>
   &nbsp;
     &nbsp;
