--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<link rel="stylesheet" type="text/css" href="css/styles.css"></link>
+<link rel="stylesheet" type="text/css" href="css/styles1.css"></link>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"></link>
 
