--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <link rel="stylesheet" type="text/css" href="assets/css/styles1.css"></link>
+  <link rel="stylesheet" type="text/css" href="assets/css/styles.css"></link>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"></link>
 
