--- a/portfolio.html
+++ b/portfolio.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>Felix Zavala</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {font-family: "Raleway", Arial, sans-serif}
+.w3-row img {margin-bottom: -8px}
 
-  <head>
-  <title>Felix Zavala</title>
-
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<link rel="stylesheet" type="text/css" href="assets/css/styles1.css"></link>
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css"></link>
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"></link>
-
-
-</head>
-
-
+</style>
 <body>
-<div class="navbar">
-  <ul>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#code">Code</a></li>
-    <li><a href="#design">Design</a></li>
-    
-  
-  </ul>
-</div>
-  <a href="index.html"><img class="fzspace" src="img/home.png" alt="Felix Zavala logo"></a>
-  
 
+<!-- !PAGE CONTENT! -->
+<div class="w3-content" style="max-width:1500px">
+
+  <!-- Header -->
+  <header class="w3-container w3-xlarge w3-padding-44">
+   <br>
+    <a href="index.html"><IMG align="left" src="img/fz-gif-courier.gif" style="width:25%" alt="Felix Zavala Motion graphics logo"></a>
+    <a href="about.html" class="w3-right w3-button w3-white">About</a>
+  </header>
+  &nbsp;
+    &nbsp;
+   <br>
+    <br>
+  <!-- Photo Grid -->
   <div class="w3-row">
     <div class="w3-half">
       <img src="/img/pf-s100-mockup-04111.jpg" style="width:100%" alt="Beard oil bottle mockup">
