--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,10 @@ body {font-family: "Raleway", Arial, sans-serif}
   <header class="w3-container w3-xlarge w3-padding-44">
    <br>
     <a href="index.html"><IMG align="left" src="img/homeblack.png" style="width:10%" alt="Felix Zavala Motion graphics logo"></a>
+    <a href="about.html" class="w3-right w3-button w3-white">Contact</a>
     <a href="about.html" class="w3-right w3-button w3-white">About</a>
-     <a href="about.html" class="w3-right w3-button w3-white">Contact</a>
+      <a href="about.html" class="w3-right w3-button w3-white">Code</a>
+  
      
      
   </header>
