--- a/index.html
+++ b/index.html
@@ -69,11 +69,16 @@
         <div class="content">
           <h1>HTML / CSS / Javascript </h1>
           <p>
-            I'm constanly improving my skills by refining the basics.
-            This website and the game below are some examples of 
-           some fun stuff I've created with HTML, CSS, and Javascript. 
+            HTML, CSS, & JavaScript are an 
+            essential part of the web developer’s arsenal. The web standards for these languages 
+            are constantly 
+            evolving. That is why
+            I am constanly learning and refining my skills.
+            I just succesfully completed freeCodeCamps Responsive Web Design course. That
+            represents approximately 300 hours of coursework in HTML, CSS, and Javascript.
+
            </p>
-   
+          <p> <a href="/img/fzwebcert.jpg">Code Camp Certification</a></p>
          
        </div>
      </div>
@@ -104,7 +109,7 @@
           <div class="content">
             <h1>Graphic Design</h1>
             <p>
-             I'm an experienced graphic designer with years of experience
+             I'm an experienced graphic designer with years of
               creating web and motion graphics.
             Check out some of my work.</p>
             <a href="/portfolio.html" class="btn">My portfolio</a>
