--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg" class="fa fa-youtube"></a>
   <a href="https://www.instagram.com/graphic_felix/" class="fa fa-instagram"></a>
 </div>
- <p class="toptxtgame"><a href="https://www.felixzavala.com/>felixzavala.com 2021</a></p>
+ <p class="toptxtgame"><a href="https://www.felixzavala.com/">felixzavala.com 2021</a></p>
 </footer>
  
  </html>
