--- a/index.html
+++ b/index.html
@@ -137,13 +137,16 @@
 
   </body>
 <footer>
-  <div id="social">
-  <a href="https://www.facebook.com/GraphicFelix/" class="fa fa-facebook"></a>
-  <a href="https://twitter.com/GraphicFelix" class="fa fa-twitter"></a>
-<a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg" class="fa fa-youtube"></a>
-  <a href="https://www.instagram.com/graphic_felix/" class="fa fa-instagram"></a>
-</div>
- <p class="toptxtgame"><a href="https://www.felixzavala.com/">felixzavala.com 2021</a></p>
+    <div class="socialtxt">
+    <a href="https://www.facebook.com/GraphicFelix/" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/GraphicFelix" class="fa fa-twitter"></a>
+    <a href="https://www.youtube.com/channel/UCpo68l_fzOgV05so_EnNdyg" class="fa fa-youtube"></a>
+    <a href="https://www.instagram.com/graphic_felix/" class="fa fa-instagram"></a>
+      
+    
+    </div>
+  
+  <p class="toptxtgame"><a href="https://www.felixzavala.com/">felixzavala.com 2021</p>
 </footer>
  
  </html>
