--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <div class="content">
           <h1>HTML / CSS / Javascript </h1>
           <p>
-    HTML, CSS, & JavaScript are an essential part of every web developer’s arsenal. I'm consistently pursuing ways to refine these core skills. I just succesfully completed freeCodeCamps Responsive Web Design course.
+    HTML, CSS, & JavaScript are an essential part of every web developer’s arsenal. This website and the game at the bottom of the page
+            were both created using these 3 web languages. I'm consistently pursuing ways to refine these core skills. I just 
+            succesfully completed freeCodeCamps Responsive Web Design course.
             That represents approximately 300 hours of coursework in HTML, CSS, and Javascript. They are an amazing free resource for developers of all levels.
             
 
