--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             
 
            </p>
-          <p><a href="https://mailchi.mp/ab087871e41a/mars/">Landing Page</a> <a href="/img/fzwebcert.jpg" target="blank">My freeCodeCamp Certificate</a></p>
+          <p><a href="/mars.html">Landing Page</a> <a href="/img/fzwebcert.jpg" target="blank">My freeCodeCamp Certificate</a></p>
          
        </div>
      </div>
