--- a/mars.html
+++ b/mars.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
     <!-- Your own stylesheet -->
-    <link rel="stylesheet" type="text/css" href="stylemars.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/stylemars.css" />
   </head>
   <body>
     <div class="container d-flex align-items-center h-100">
